--- a/C# Doodle/C# Doodle.csproj
+++ b/C# Doodle/C# Doodle.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Classes\Bullet.cs" />
     <Compile Include="Classes\Enemy.cs" />
     <Compile Include="Classes\GameOver.cs" />
+    <Compile Include="Classes\GameRender.cs" />
     <Compile Include="Classes\MenuScreen.cs" />
     <Compile Include="Classes\Physics.cs" />
     <Compile Include="Classes\Platform.cs" />
